--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptionssourceCompatibility JavaVersion.VERSION_1_8 {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
