--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".BookListActivity" />
         <activity android:name=".BookDetailActivity" />
         <activity android:name=".EditProfileActivity" />
+        <activity android:name=".ProfileActivity" />
 
     </application>
 </manifest>
